# coinevo-network

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  lokinet-bootstrap  lokinet-docker.ini  module.modulemap  readme.md  readme_es.md  run-lokinet.bat
.github/ISSUE_TEMPLATE/: bug_report.md
android/: AndroidManifest.xml  build.gradle  build.xml  settings.gradle
cmake/: GenVersion.cmake  basic_definitions.cmake  shadow.cmake
contrib/apparmor/: usr.bin.lokinet
contrib/bootserv/: .gitignore  makefile  readme.md
contrib/bootstrap/: readme.txt
contrib/cluster-shell/: clear-nodedbs.sh  init.sh  makenode.sh  start.sh  stop.sh
contrib/dtrace/: coinevonet.xml
contrib/kubernetes/: coinevo-daemonset.yaml  coinevo-deployment.yaml  coinevonet-service.yaml  kubernetes.yaml
daemon/: CMakeLists.txt  lokinetctl.cpp  main.cpp
debian/: changelog  coinevo-service-nodes.7  coinevonet.service  control  copyright  lokinet-bootstrap.1  lokinet.1  lokinet.install  lokinet.manpages  postinst
docker/: coinevo-svc-kubernetes.Dockerfile  router.Dockerfile
docs/: README  api_v0.txt  high-level.txt  lokinet_admin_v0.txt  proto_v0.txt
docs/spanish/: README  (+1 more)
include/: llarp.h
jni/: CMakeLists.txt  coinevonet_config.cpp  lokinet_daemon.cpp  lokinet_jni_common.hpp  lokinet_jni_vpnio.hpp  lokinet_vpn.cpp  network_coinevo_coinevonet_CoinevonetDaemon.h  network_coinevo_coinevonet_CoinevonetVPN.h  network_loki_lokinet_LokinetConfig.h  network_loki_lokinet_LokinetVPN_VPNInfo.h  network_loki_lokinet_Lokinet_JNI.h
libabyss/: main.cpp
llarp/: CMakeLists.txt  context.cpp  testnet.c
osx-setup/: distribution.xml  make-release.sh
ui-ios/: CMakeLists.txt
ui-ios/lokinet/: AppDelegate.swift  CMakeLists.txt  ViewController.swift
ui-ios/lokinet/lokinet.xcdatamodeld/: .xccurrentversion
ui-macos/: WindowsManager.swift
ui-win32/: AboutBox.Designer.cs  AboutBox.cs  App.config  LogDumper.cs  Program.cs  Settings.cs  UIMain.Designer.cs  UIMain.cs  UserSettings.Designer.cs  UserSettings.cs  VisualSettings.Designer.cs  VisualSettings.cs  coinevovpn.csproj  dlgBootstrap.Designer.cs  dlgBootstrap.cs  dlgBootstrap.resx  lokivpn.sln
win32-setup/: Makefile  lokinet-win32.iss  notes.txt  regdb_helper.c
(+107 files in other folders)
